deployment/dev/blue/dev-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-app-blue
  namespace: dev
spec:
  type: NodePort
  ports:
  - port: 5000
  selector:
    app: register-app-blue
